--- a/src/styles/auth.scss
+++ b/src/styles/auth.scss
@@ -60,12 +60,13 @@
         height: 50px;
         border-radius: 8px;
         padding: 0 16px;
-        background: #fff;
-        border: 1px solid #a8a8b3;
+        background: #ffffff;
+        border: 1px solid #f8f8f8;
       }
 
       button {
         margin-top: 16px;
+        border-radius: 8px;
       }
 
       button, input {
