--- a/src/styles/room-code.scss
+++ b/src/styles/room-code.scss
@@ -3,7 +3,7 @@
   border-radius: 8px;
   overflow: hidden;
 
-  background: #fff;
+  background: #ffffff;
   border: 1px solid #835afd;
   cursor: pointer;
 
