--- a/src/components/Question/style.scss
+++ b/src/components/Question/style.scss
@@ -1,5 +1,5 @@
 .question {
-  background: #fefefe;
+  background: rgb(197, 197, 197);
   border-radius: 8px;
   box-shadow: 0 2px 12px rgba(0, 0, 0, 0.4);
   padding: 24px;
@@ -30,7 +30,7 @@
 
         span {
           margin-left: 8px;
-          color: #737380;
+          color: #000000;
           font-size: 14px;
         }
       }
@@ -44,14 +44,14 @@
         &.like-button {
           display: flex;
           align-items: flex-end;
-          color: #737380;
+          color: rgb(0, 0, 0);
           gap: 8px;
 
           &.liked {
-            color: #835afd;
+            color: #453679;
 
             svg path {
-              stroke: #835afd;
+              stroke: #453679;
             }
           }
         }
