--- a/src/styles/button.scss
+++ b/src/styles/button.scss
@@ -20,9 +20,9 @@
     }
 
     &.outlined {
-      background: #fff;
-      border: 1px solid #835afd;
-      color:#835afd;
+      background: #7d5eee;
+      border: 1px solid #7d5eee;
+      color:#ffffff;
     }
 
    &:not(:disabled):hover {
