--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -4,8 +4,8 @@
   box-sizing: border-box;
 }
 body {
-  background: #f8f8f8;
-  color: #29292e;
+  color: #f8f8f8;
+  background: #666666;
 }
 body, input, button, textarea {
   font: 400 16px 'Roboto', sans-serif;
