--- a/src/styles/room.scss
+++ b/src/styles/room.scss
@@ -60,7 +60,7 @@
         background: #c3c3c3;
         box-shadow: 0 2px 12px rgba(0, 0, 0, 0.4);
         resize: vertical;
-        color: white;
+        color: rgb(0, 0, 0);
         min-height: 130px;
       }
 
