--- a/src/components/Question/style.scss
+++ b/src/components/Question/style.scss
@@ -6,7 +6,20 @@
 
   & + .question {
     margin-top: 8px;
+
+    
+  &.highlighted {
+    background: #f4f0ff;
+    border: 1px solid #835afd;
+    
   }
+  
+  &.answered {
+    background: #444343;
+  }
+
+  }
+
 
   p {
     color: #29292e;
@@ -33,6 +46,10 @@
           color: #000000;
           font-size: 14px;
         }
+      }
+      > div {
+        display: flex;
+        gap: 10px;
       }
 
       button {
