--- a/src/components/Question/style.scss
+++ b/src/components/Question/style.scss
@@ -6,19 +6,19 @@
 
   & + .question {
     margin-top: 8px;
+  }
 
     
-  &.highlighted {
+  & .highLighted {
     background: #f4f0ff;
     border: 1px solid #835afd;
     
   }
   
-  &.answered {
+  & .answered {
     background: #444343;
   }
 
-  }
 
 
   p {
