--- a/src/components/Question/style.scss
+++ b/src/components/Question/style.scss
@@ -5,18 +5,17 @@
   padding: 24px;
 
   & + .question {
-    margin-top: 8px;
+    margin-top: 8px;   
   }
-    
-  & .highLighted {
-
+  
+  &.highlighted {
     background: #f4f0ff;
     border: 1px solid #835afd;
     
   }
   
-  & .answered {
-    background: #444343;
+  &.answered {
+    background: #a09f9f;
   }
 
   p {
